# models.rs

./: .gitignore  .gitmodules  Cargo.toml  build.rs
.github/workflows/: rust.yml
llamacpp/: Cargo.toml
llamacpp-sys/: .gitignore  Cargo.toml  build.rs
llamacpp-sys/src/: lib.rs
llamacpp/src/: lib.rs
model-server/: Cargo.toml
model-server/src/: api_types.rs  db_types.rs  import.rs  lib.rs  main.rs  state.rs
model-server/src/db/: conn.rs  core.rs  manager.rs  migration.rs  mod.rs  tables.rs
model-server/src/router/: generate.rs  hfhub.rs  imports.rs  mod.rs  models.rs
model-server/src/state/: mod.rs  model.rs
src/: bindings.rs  ggml.rs  lib.rs  main.rs
