[package]
name = "llamacpp"
version.workspace = true
edition.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
llamacpp-sys = { path = "../llamacpp-sys" }
tokio = { version = "1.32.0", features = ["sync"] }
