[package]
name = "model-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = { version = "0.6.20", features = ["tracing", "macros"] }
env_logger = "0.10.0"
envy = "0.4.2"
llamacpp = { path = "../llamacpp" }
log = "0.4.20"
once_cell = "1.18.0"
regex = "1.9.4"
rusqlite = { version = "0.29.0", features = ["bundled"] }
semver = { version = "1.0.18", features = ["serde"] }
serde = { version = "1.0.188", features = ["serde_derive"] }
serde_json = "1.0.105"
time = { version = "0.3.28", features = ["serde", "serde-human-readable", "macros", "serde-well-known"] }
tokio = { version = "1.32.0", features = ["full"] }
tokio-rusqlite = "0.4.0"
tower = "0.4.13"
tower-http = { version = "0.4.3", features = ["trace"] }
tower-service = "0.3.2"
tracing = "0.1.37"
tracing-subscriber = "0.3.17"
uuid = { version = "1.4.1", features = ["v4", "serde"] }

[dev-dependencies]
tempdir = "0.3.7"
